navbar logo repsonsiveness fix and right align navbar links

--- a/mixin.scss
+++ b/mixin.scss
@@ -4,7 +4,11 @@
 
 @mixin container{margin: 1rem; display: flex; flex-direction: column; flex-wrap: wrap; justify-content: center; align-items: center;}
 
-//navbar
-@mixin no-logos {#logo-big,#logo-small{display: none;}}
-@mixin big-logo {#logo-big{display: flex;}
-#logo-small{display: none;}}
+// //navbar
+// @mixin no-logos {#logo,#logo-small,#logo-tiny{display: none;}}
+// @mixin tiny-logo {#logo-tiny p{display: flex;}
+// #logo-small p, #logo p{display: none;}}
+// @mixin small-logo {#logo-tiny p, #logo p{display: none;}
+// #logo-small p {display: flex;}}
+// @mixin logo {#logo p{display: flex;}
+// #logo-small p, #logo-tiny p{display: none;}}
